--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "mysql2": "^3.2.4",
     "path": "^0.12.7",
     "sequelize": "^6.31.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "validator": "^13.9.0"
   }
 }
